Hide balloon overflow to prevent horizontal scroll

--- a/src/demo.scss
+++ b/src/demo.scss
@@ -181,6 +181,16 @@ table {
   }
 }
 
+.pg-balloons {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+}
+
 .pg-balloon-container {
   pointer-events: none;
   z-index: 10;
